@@ -6,6 +6,8 @@
 		- Add dbsize command(2014-11-02)
 		- Include sync clients' stats in info(2014-11-02)
 		- Refactor codes, separate into: libutil, libnet, libssdb(2014-11-02)
+	* Bug fixes:
+		- Fix bug when process dump and sync140 command with redis-cli(2015-01-27)
 * 1.7.0.1
 	* New features:
 		- Sync qset operations(2014-11-05)
